<resources>
    <string name="app_name">Calc It!</string>

    <!-- Sections -->
    <string name="section_title_calculator">Calculator</string>
    <string name="section_title_rpn">RPN</string>
    <string name="section_title_wolfram_alpha">Wolfram Alpha</string>

    <!-- BasicCalculator digits -->
    <string name="calculator_digit_1">1</string>
    <string name="calculator_digit_2">2</string>
    <string name="calculator_digit_3">3</string>
    <string name="calculator_digit_4">4</string>
    <string name="calculator_digit_5">5</string>
    <string name="calculator_digit_6">6</string>
    <string name="calculator_digit_7">7</string>
    <string name="calculator_digit_8">8</string>
    <string name="calculator_digit_9">9</string>
    <string name="calculator_digit_0">0</string>

    <!-- BasicCalculator operations buttons -->
    <string name="calculator_operation_button_add">+</string>
    <string name="calculator_operation_button_subtract">-</string>
    <string name="calculator_operation_button_multiply">×</string>
    <string name="calculator_operation_button_divide">÷</string>
    <string name="calculator_operation_button_calculate">=</string>
    <string name="calculator_operation_button_remainder">%</string>
    <string name="calculator_operation_button_reciprocal">1/n</string>
    <string name="calculator_operation_button_sqrt">√</string>
    <string name="calculator_operation_button_inverse">±</string>
    <string name="calculator_operation_button_dot">.</string>
    <string name="calculator_operation_button_power">xⁿ</string>

    <!-- BasicCalculator operations signs -->
    <string name="calculator_operation_sign_add">+</string>
    <string name="calculator_operation_sign_subtract">-</string>
    <string name="calculator_operation_sign_multiply">×</string>
    <string name="calculator_operation_sign_divide">÷</string>
    <string name="calculator_operation_sign_remainder">%</string>
    <string name="calculator_operation_sign_power">^</string>


    <!-- BasicCalculator actions -->
    <string name="calculator_action_clear">C</string>
    <string name="calculator_action_memory_clear">MC</string>
    <string name="calculator_action_memory_restore">MR</string>
    <string name="calculator_action_memory_save">MS</string>
    <string name="calculator_action_erase">←</string>
    <string name="calculator_action_enter">Enter</string>

    <!-- BasicCalculator messages -->
    <string name="calculator_message_error">Error</string>
    <string name="calculator_message_memory">M</string>

    <!-- Notifications -->
    <string name="error_empty_query">Please enter a text to search.</string>
    <string name="error_try_again">An error occurred, please try again later.</string>

    <!-- Actions -->
    <string name="action_search">Search</string>

    <!-- Messages -->
    <string name="message_enter_query">Enter a text to search through the Wolfram|Alpha</string>
    <string name="message_query">Text to search</string>
    <string name="message_no_results">Wolfram|Alpha doesn\'t know how to interpret your input.</string>
</resources>
