<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".fragment.CalculatorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/result_field_height"
        android:layout_marginBottom="@dimen/result_field_margin_vertical"
        android:layout_marginLeft="@dimen/result_field_margin_horizontal"
        android:layout_marginRight="@dimen/result_field_margin_horizontal"
        android:layout_marginTop="@dimen/result_field_margin_vertical"
        android:background="@color/colorFieldBackground"
        android:padding="@dimen/result_field_padding">

        <TextView
            android:id="@+id/text_view_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="end|center_vertical"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sub_label_text_size" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/text_view_previous_operand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_view_memory"
            android:layout_toRightOf="@+id/text_view_memory"
            android:ellipsize="start"
            android:gravity="end|center_vertical"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sub_label_text_size"
            autofit:minTextSize="@dimen/label_text_size_min" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/text_view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_memory"
            android:ellipsize="start"
            android:gravity="end|center_vertical"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/label_text_size"
            autofit:minTextSize="@dimen/label_text_size_min" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_memory_clear"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_clear" />

            <TextView
                android:id="@+id/button_memory_restore"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_restore" />

            <TextView
                android:id="@+id/button_memory_save"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_save" />

            <TextView
                android:id="@+id/button_clear"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_clear" />

        </TableRow>

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_erase"
                style="@style/CalculatorButton"
                android:layout_span="2"
                android:text="@string/calculator_action_erase" />

            <TextView
                android:id="@+id/button_power"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_power" />

            <TextView
                android:id="@+id/button_inverse"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_inverse" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/button_reciprocal"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_reciprocal" />

            <TextView
                android:id="@+id/button_remainder"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_remainder" />

            <TextView
                android:id="@+id/button_sqrt"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_sqrt" />

            <TextView
                android:id="@+id/button_divide"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_divide" />

        </TableRow>

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_7"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_7" />

            <TextView
                android:id="@+id/button_8"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_8" />

            <TextView
                android:id="@+id/button_9"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_9" />

            <TextView
                android:id="@+id/button_multiply"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_multiply" />

        </TableRow>

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_4"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_4" />

            <TextView
                android:id="@+id/button_5"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_5" />

            <TextView
                android:id="@+id/button_6"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_6" />

            <TextView
                android:id="@+id/button_subtract"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_subtract" />

        </TableRow>

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_1"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_1" />

            <TextView
                android:id="@+id/button_2"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_2" />

            <TextView
                android:id="@+id/button_3"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_3" />

            <TextView
                android:id="@+id/button_add"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_add" />

        </TableRow>

        <TableRow style="@style/CalculatorButtonRow">

            <TextView
                android:id="@+id/button_dot"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_dot" />

            <TextView
                android:id="@+id/button_0"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_0" />

            <TextView
                android:id="@+id/button_calculate"
                style="@style/CalculatorButtonAccent"
                android:layout_span="2"
                android:text="@string/calculator_operation_button_calculate" />

        </TableRow>

    </TableLayout>

</LinearLayout>
