<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_margin"
    tools:context=".fragment.RPNFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_field_margin_vertical"
        android:layout_marginLeft="@dimen/result_field_margin_horizontal"
        android:layout_marginRight="@dimen/result_field_margin_horizontal"
        android:layout_marginTop="@dimen/result_field_margin_vertical"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/fragment_rpn_listView_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_between_result_fields"
            android:layout_marginRight="@dimen/margin_between_result_fields"
            android:layout_weight="0.5"
            android:background="@color/colorFieldBackground"
            android:divider="@color/colorFieldBackground"
            android:dividerHeight="1dp"
            android:paddingBottom="@dimen/result_list_padding_vertical"
            android:paddingTop="@dimen/result_list_padding_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorFieldBackground"
            android:orientation="vertical"
            android:padding="@dimen/result_field_padding">

            <TextView
                android:id="@+id/fragment_rpn_textView_memory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/sub_label_text_size" />

            <TextView
                android:id="@+id/fragment_rpn_textView_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/label_text_size" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_memory_clear"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_clear" />

            <TextView
                android:id="@+id/fragment_calculator_button_memory_restore"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_restore" />

            <TextView
                android:id="@+id/fragment_calculator_button_memory_save"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_memory_save" />

            <TextView
                android:id="@+id/fragment_calculator_button_clear"
                style="@style/CalculatorButton"
                android:text="@string/calculator_action_clear" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_erase"
                style="@style/CalculatorButton"
                android:layout_span="2"
                android:text="@string/calculator_action_erase" />

            <TextView
                android:id="@+id/fragment_calculator_button_power"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_power" />

            <TextView
                android:id="@+id/fragment_calculator_button_inverse"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_inverse" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_reciprocal"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_reciprocal" />

            <TextView
                android:id="@+id/fragment_calculator_button_remainder"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_remainder" />

            <TextView
                android:id="@+id/fragment_calculator_button_sqrt"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_sqrt" />

            <TextView
                android:id="@+id/fragment_calculator_button_divide"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_divide" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_7"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_7" />

            <TextView
                android:id="@+id/fragment_calculator_button_8"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_8" />

            <TextView
                android:id="@+id/fragment_calculator_button_9"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_9" />

            <TextView
                android:id="@+id/fragment_calculator_button_multiply"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_multiply" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_4"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_4" />

            <TextView
                android:id="@+id/fragment_calculator_button_5"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_5" />

            <TextView
                android:id="@+id/fragment_calculator_button_6"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_6" />

            <TextView
                android:id="@+id/fragment_calculator_button_subtract"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_subtract" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_1"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_1" />

            <TextView
                android:id="@+id/fragment_calculator_button_2"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_2" />

            <TextView
                android:id="@+id/fragment_calculator_button_3"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_3" />

            <TextView
                android:id="@+id/fragment_calculator_button_add"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_add" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/fragment_calculator_button_dot"
                style="@style/CalculatorButton"
                android:text="@string/calculator_operation_button_dot" />

            <TextView
                android:id="@+id/fragment_calculator_button_0"
                style="@style/CalculatorButtonLight"
                android:text="@string/calculator_digit_0" />

            <TextView
                android:id="@+id/fragment_calculator_button_enter"
                style="@style/CalculatorButtonAccent"
                android:text="@string/calculator_action_enter" />

            <TextView
                android:id="@+id/fragment_calculator_button_calculate"
                style="@style/CalculatorButtonAccent"
                android:text="@string/calculator_operation_button_calculate" />

        </TableRow>

    </TableLayout>

</LinearLayout>
